# input-board

./: CMakeLists.txt  Test Input.code-workspace  compile_commands.json  platformio.ini  run.sh
mock/: input_board.cpp
src/: assert_err.cpp  defaults.h  error_handling.cpp  error_handling.hpp  error_level_range_checks.h  handle_heartbeat.cpp  main.cpp  sdc.h  state_estimation.cpp  state_estimation.h
src/can/: can.cpp  can.hpp
src/canzero/: canzero.cpp  canzero.h
src/control/: velocity.cpp
src/firmware/: ain_scheduler.h  analog_config.h  can.h  firmware.h  input_board.cpp  input_board.h  input_board_config.h  input_board_pinout.h  metrics.h  mux_scheduler.h  pinout.h
src/fsm/: error_handling.cpp  fsm.cpp  sdc.cpp  sdc.h
src/fsm/states/: acceleration.cpp  arming45.cpp  calibrating.cpp  controller.cpp  cruising.cpp  deceleration.cpp  disarming45.cpp  guidance_stable.cpp  idle.cpp  init.cpp  levitation_stable.cpp  precharge.cpp  ready.cpp  restarting.cpp  shutdown.cpp  start_guidance.cpp  start_levitation.cpp  stop_guidance.cpp  stop_levitation.cpp
src/sensors/: accelerometer.cpp  accelerometer.h  ambient_temperature.cpp  ambient_temperature.h  bat24_current.cpp  bat24_current.h  bat24_temperature.cpp  bat24_temperature.h  bat24_voltage.cpp  bat24_voltage.h  buck_temperature.cpp  buck_temperature.h  cooling_flowrate.cpp  cooling_flowrate.h  cooling_pressure.cpp  cooling_pressure.h  cooling_temperature.cpp  cooling_temperature.h  ebox_temperature.cpp  ebox_temperature.h  guidance_temperature.cpp  guidance_temperature.h  linear_encoder.cpp  linear_encoder.h  link24_current.cpp  link24_current.h  link24_voltage.cpp  link24_voltage.h  link45_current.cpp  link45_current.h  link45_voltage.cpp  link45_voltage.h  mass_flow_rate.cpp  mass_flow_rate.h  mcu_temperature.cpp  mcu_temperature.h  supercap_temperature.cpp  supercap_temperature.h  supercap_voltage.cpp  supercap_voltage.h
src/sensors/formulas/: hall_sensors.h  isolated_voltage.h  ntc_north_star.h  ntc_steinhart.h  sick_pbt.h
src/state_estimation/: accelerometer.cpp  accelerometer.h  ekf.cpp  ekf.hpp  linear_encoder.cpp  linear_encoder.h  state_estimation.cpp  state_estimation.h  state_estimation_linear.cpp.backup
src/util/: boxcar.h  heap.h  len.h  lina.h  metrics.h  ntc_eq.h  periodic_scheduler.h  pool_allocator.h  static_vec.h  timestamp.h  timing.h
